syntax = "proto3";

package manager;

option go_package = "dev.rubentxu.devops-platform/adapters/grpc/protos/manager";

// Servicio que el Worker usa para registrarse en el WorkerManager.
service WorkerRegistrationService {
  rpc RegisterWorker (RegisterWorkerRequest) returns (RegisterWorkerResponse);
}

// Solicitud y Respuesta para registrar un worker
message RegisterWorkerRequest {
  string worker_id = 1;
  string worker_name = 2;
  string address = 3;
  int32 port = 4;
}

message RegisterWorkerResponse {
  bool success = 1;
  string message = 2;
}